--- a/package.json
+++ b/package.json
@@ -9,8 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^36.0.1",
+    "@ckeditor/ckeditor5-react": "^5.1.0",
+    "ckeditor5-build-classic-dna": "^1.3.3",
+    "daisyui": "^2.51.1",
+    "dompurify": "^3.0.0",
+    "draft-js": "^0.11.7",
+    "firebase": "^9.17.1",
+    "html-react-parser": "^3.0.9",
     "next": "13.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.2",
+    "react-icons": "^4.7.1",
+    "react-select": "^5.7.0"
+  },
+  "devDependencies": {
+    "@types/react": "18.0.28",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
+    "typescript": "4.9.5"
   }
 }
