--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start:local": "NODE_ENV=local npm run start",
+    "start:dev": "NODE_ENV=dev npm run start"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^36.0.1",
     "@ckeditor/ckeditor5-react": "^5.1.0",
+    "@nestjs/config": "^2.3.1",
+    "axios": "^1.3.4",
     "ckeditor5-build-classic-dna": "^1.3.3",
     "daisyui": "^2.51.1",
     "dompurify": "^3.0.0",
+    "dotenv": "^16.0.3",
     "draft-js": "^0.11.7",
     "firebase": "^9.17.1",
     "html-react-parser": "^3.0.9",
