--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "firebase": "^9.17.1",
     "html-react-parser": "^3.0.9",
     "next": "13.2.1",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
