--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-select": "^5.7.0"
   },
