--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "start:local": "NODE_ENV=local npm run start",
-    "start:dev": "NODE_ENV=dev npm run start"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^36.0.1",
     "@ckeditor/ckeditor5-react": "^5.1.0",
+    "@ckeditor/ckeditor5-theme-lark": "^36.0.1",
     "@nestjs/config": "^2.3.1",
     "axios": "^1.3.4",
     "ckeditor5-build-classic-dna": "^1.3.3",
