--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^36.0.1",
     "@ckeditor/ckeditor5-react": "^5.1.0",
     "@ckeditor/ckeditor5-theme-lark": "^36.0.1",
     "@nestjs/config": "^2.3.1",
-    "@sanity/vision": "^3.0.0",
     "axios": "^1.3.4",
     "ckeditor5-build-classic-dna": "^1.3.3",
     "daisyui": "^2.51.1",
@@ -20,8 +20,10 @@
     "dotenv": "^16.0.3",
     "draft-js": "^0.11.7",
     "firebase": "^9.17.1",
+    "firebase-admin": "^11.5.0",
     "html-react-parser": "^3.0.9",
     "lottie-react": "^2.4.0",
+    "moment": "^2.29.4",
     "next": "13.2.1",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
@@ -32,13 +34,12 @@
     "react-icons": "^4.7.1",
     "react-select": "^5.7.0",
     "redraft": "^0.10.2",
-    "sanity": "^3.0.0",
     "styled-components": "^5.2.0",
     "suneditor": "^2.44.3",
-    "suneditor-react": "^3.4.1"
+    "suneditor-react": "^3.4.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@sanity/vision": "^3.0.0",
     "@types/react": "18.0.28",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
