--- a/package.json
+++ b/package.json
@@ -25,17 +25,19 @@
     "moment": "^2.29.4",
     "next": "13.2.1",
     "nextjs-progressbar": "^0.0.16",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.2",
+    "react-hook-form": "^7.43.7",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
-    "react-select": "^5.7.0",
+    "react-quill": "^2.0.0",
+    "react-select": "^5.7.2",
     "redraft": "^0.10.2",
     "styled-components": "^5.2.0",
     "suneditor": "^2.44.3",
     "suneditor-react": "^3.4.1",
+    "swr": "^2.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
