--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^36.0.1",
-    "@ckeditor/ckeditor5-react": "^5.1.0",
-    "@ckeditor/ckeditor5-theme-lark": "^36.0.1",
     "@nestjs/config": "^2.3.1",
+    "@uiw/react-back-to-top": "^1.2.1",
     "axios": "^1.3.4",
-    "ckeditor5-build-classic-dna": "^1.3.3",
     "daisyui": "^2.51.1",
     "dompurify": "^3.0.0",
     "dotenv": "^16.0.3",
@@ -34,11 +31,9 @@
     "react-icons": "^4.7.1",
     "react-quill": "^2.0.0",
     "react-select": "^5.7.2",
-    "redraft": "^0.10.2",
     "styled-components": "^5.2.0",
-    "suneditor": "^2.44.3",
-    "suneditor-react": "^3.4.1",
     "swr": "^2.1.0",
+    "use-react-infinite-scroll": "^1.0.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
